# tau-radio

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml  release.yml  rust.yml
docs/: proxy-setup.md
src/: main.rs
src/args/: mod.rs
src/audio/: mod.rs
src/config/: mod.rs
src/config/prompts/: mod.rs
src/err/: mod.rs
src/icecast/: mod.rs
src/threads/: mod.rs
src/threads/icecast/: mod.rs
src/threads/udp/: mod.rs
src/threads/ws/: mod.rs
src/ui/: mod.rs
src/util/: mod.rs
