[package]
name = "tau-radio"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
config = "0.15.13"
cpal = { version = "0.16.0", features = ["asio", "jack", "wasm-bindgen"] }
crossbeam = "0.8.4"
ctrlc = "3.5.0"
dialoguer = "0.11.0"
inline_colorization = "0.1.6"
is-ip = "0.1.0"
opusenc = {git = "https://github.com/vsandstrom/opusenc-rs", branch = "homebrew_fix"}
regex = "1.11.1"
ringbuf = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
shout = "0.2.1"
thiserror = "2.0.16"
toml = "0.9.5"
tungstenite = { version = "0.27.0", features = ["native-tls"] }

